# bitcoin-core-rs

./: Cargo.toml  README.md  build.rs  vendor-bitcoin-core.sh
.cargo/: config.toml
sp1-test/elf/: riscv32im-succinct-zkvm-elf
sp1-test/program/: Cargo.toml
sp1-test/program/src/: main.rs
src/: error.rs  lib.rs
src/native/: bitcoin_core_wrapper.cpp  bitcoin_core_wrapper.h
