[package]
name = "bitcoin-core-rs"
version = "0.1.0"
edition = "2021"
description = "Bitcoin Core src/consensus Rust bindings."
keywords = [ "bitcoin", "bitcoinconsensus" ]
readme = "README.md"
# TODO: update this to actually exclude 
exclude = []
build = "build.rs"

[features]
default = ["std"]
std = []

[dependencies]
eyre = "0.6.12"
hex-literal = "0.4"
thiserror = "2.0.3"

[dev-dependencies]
hex = "0.4"

[build-dependencies]
cc = "1.0"
