[package]
name = "bitcoin-core-rs"
version = "0.1.0"
edition = "2021"
description = "Bitcoin Core src/consensus Rust bindings."
keywords = [ "bitcoin", "bitcoinconsensus" ]
readme = "README.md"
# TODO: update this to actually exclude 
exclude = []
build = "build.rs"

[features]
default = ["std"]
std = []

[dependencies]
eyre = "0.6.12"
thiserror = "2.0.3"

[dev-dependencies]
alloy-primitives = "0.8.12"

[build-dependencies]
cc = "1.0"
